test/Feature/Output/CheckMemoryAccess.c.tmp.klee-out/test000001.pc
array range1[4] : w32 -> w8 = symbolic
(query [(Ult N0:(ReadLSB w32 0 range1)
              2)
         (Eq false (Eq 0 N0))]
        false)
